add/how to return json

--- a/example/src/hello_world/views/hello world.html
+++ b/example/src/hello_world/views/hello world.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-<h1 style="color: deeppink">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HELLO WORLD <br> </h1>
+<h1 style="color: deeppink">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HELLO WORLD <br> 小宋专享版beego教程</h1>
 
 </body>
 </html>
